--- a/src/components/style.css
+++ b/src/components/style.css
@@ -407,7 +407,7 @@ hr {
   border-radius: 8px;
   padding: 15px;
   text-align: center;
-  background: #fff;
+  background: #740274;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
